# autool

./: .gitignore  README.md  package.json  tailwind.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands_for_camel.rs  commands_for_creating.rs  commands_for_kimchimail.rs  commands_for_signing.rs  commands_for_verifying.rs  lib.rs  main.rs
src/Views/0AppsView/: Route.tsx  index.tsx
src/Views/1Creating/: index.tsx  useKeyPairGeneration.ts
src/Views/1NotesView/: ButtonAddNewNote.tsx  Note.tsx  Tabs.tsx  Tooltip.tsx  index.tsx
src/Views/1NotesView/customs/: schema.ts
src/Views/1NotesView/customs/blocks/noteTitle/: Title.tsx  title.css
src/Views/1NotesView/customs/inlines/links/: Links.tsx  listAllNotesOnMenu.ts
src/Views/1NotesView/functions/: getTitleType.ts  handleArray.ts  handleLocalstorage.ts  handleNoteId.ts
src/Views/1NotesView/graph/: GraphView.tsx  getLinks.ts  getNodes.ts  useWindowSize.ts
src/Views/1NotesView/graph/RightClickEvents/: MenuOnRightClickOnNode.tsx  ModalThatIncludesContextMenu.tsx  useRightClick.ts
src/Views/2SigningView/: index.tsx  useMessageSigning.ts
src/Views/2Wallets/: index.tsx
src/Views/3Camels/: index.tsx
src/Views/3VerifyingView/: index.tsx  useVerifySignature.ts
src/Views/4KimchImail/: index.tsx
src/Views/9StateStore/: useAppsStateStore.ts  useNoteAppStateStore.ts
