[package]
name = "bongkow-dsk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bongkow_dsk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.4.0", features= ["cuda"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = ["cuda"] }
thiserror = "1.0.64"
anyhow = "1.0.90"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-dialog = "2"
once_cell = "1.18"
lazy_static = "1.4"
futures-util = "0.3"   
reqwest = "0.12.12"
tokio-native-tls = "0.3"
native-tls = "0.2"
base64 = "0.21"
encoding_rs = "0.8"
regex = "1.10"
chrono = "0.4"
